# VanillaCakeADT

./: .gitignore  CMakeLists.txt  DataContainer.c  DataContainer.h  LICENSE  ListNode.h  Makefile  README.md  adtAsciiArtLogo.txt  main.c  setup.sh
include/: Config.h
include/AbstractDataTypes/DataContainer/: DataContainer.h
include/AbstractDataTypes/DataObject/: DataObject.h
include/AbstractDataTypes/List/: List.h  ListNode.h  genericErrorCodes.h
include/AbstractDataTypes/Stack/: Stack.h
include/AbstractDataTypes/Vector/: Vector.h
include/BinaryTree/: BinaryTree.h  BinaryTreeNode.h
include/DataContainer/: DataContainer.h  DataContainerTest.h
include/List/: List.h  ListNode.h  genericErrorCodes.h
src/: main.c
src/AbstractDataTypes/DataContainer/: DataContainer.c
src/AbstractDataTypes/DataObject/: DataObject.c
src/AbstractDataTypes/List/: List.c  ListNode.c
src/AbstractDataTypes/Stack/: Stack.c
src/AbstractDataTypes/Vector/: Vector.c
src/BinaryTree/: BinaryTree.c  BinaryTreeNode.c
src/DataContainer/: DataContainer.c  DataContainerTest.c
src/List/: List.c  ListNode.c
tests/: CMakeLists.txt  test_DataContainer.cpp  test_DataObject.cpp  test_General_Helpers.cpp  test_General_Helpers.h  test_List.cpp  test_ListNode.cpp  test_List_Helpers.cpp  test_List_Helpers.h  test_Stack.cpp  test_Vector.cpp  test_Vector_Helpers.cpp  test_Vector_Helpers.h  test_main.cpp
